.provarCaches/00Df2000001KKNJEA4/objects/FileLInk__External_File__c.object
<CustomObject>
    <fields>
        <fullName>FileLInk__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FileLInk__Filename__c</fullName>
        <description>The name of the file.</description>
        <label>Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileLInk__Is_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FileLInk__Mime_Type__c</fullName>
        <description>The MIME type of the file in question.</description>
        <label>Mime Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileLInk__Public_URL__c</fullName>
        <label>Public URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FileLInk__Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloudinary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FileLInk__Tags__c</fullName>
        <label>Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FileLInk__Filelink_Tags</valueSetName>
        </valueSet>
    </fields>
    <label>External File</label>
    <listViews>
        <fullName>FileLInk__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>FileLInk__External_ID__c</columns>
        <columns>FileLInk__Public_URL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>File Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>